
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int alphanum_to_int(char c)
{
    return (c < 58) ? c - 48 : c-87;
}
